--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rulepedia_server",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
